--- a/notebooks/Data Collection.ipynb
+++ b/notebooks/Data Collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "written-guinea",
+   "id": "physical-spider",
    "metadata": {},
    "source": [
     "# Data Collection"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "jewish-lying",
+   "id": "proprietary-behalf",
    "metadata": {},
    "source": [
     "<hr>"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impaired-seven",
+   "id": "subtle-nerve",
    "metadata": {},
    "source": [
     "Get an understanding of how [this](https://github.com/lmeazzini/youtube-recommender/blob/master/src/data_science/search_data_collection.py) works."
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "grand-appreciation",
+   "id": "disturbed-layer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "satisfactory-parameter",
+   "id": "binding-multimedia",
    "metadata": {},
    "source": [
     "This isn't working :("
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ranking-arcade",
+   "id": "strategic-functionality",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "instructional-enough",
+   "id": "interior-justice",
    "metadata": {},
    "source": [
     "<hr>"
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "logical-programmer",
+   "id": "certified-copyright",
    "metadata": {},
    "source": [
     "New tutorial [here](https://www.youtube.com/watch?v=th5_9woFJmk). hehe"
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "choice-feature",
+   "id": "starting-basement",
    "metadata": {},
    "source": [
     "Load API key from the txt file. (There's probably a better way to do this, but oh well!)"
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "coupled-world",
+   "id": "palestinian-special",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,9 +124,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "devoted-august",
+   "metadata": {},
+   "source": [
+    "Reference: https://github.com/googleapis/google-api-python-client  \n",
+    "Another reference: https://googleapis.github.io/google-api-python-client/docs/dyn/youtube_v3.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "academic-picking",
+   "metadata": {},
+   "source": [
+    "Get the YouTube service to let us work with the APIs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "characteristic-immune",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Allows us to connect to the YouTube API service\n",
+    "from googleapiclient.discovery import build\n",
+    "\n",
+    "# the service\n",
+    "youtube_service = build('youtube', 'v3', developerKey=API_KEY)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "detailed-jacket",
+   "metadata": {},
+   "source": [
+    "Simple API request as a test (from the tutorial video)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bearing-lawyer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "request = youtube_service.channels().list(\n",
+    "            part='statistics',\n",
+    "            forUsername='schafer5'\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "continent-filename",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = request.execute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "intense-explosion",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'kind': 'youtube#channelListResponse', 'etag': 'FSKilt7cc1WAD4nQuHlNvtnmCgk', 'pageInfo': {'totalResults': 1, 'resultsPerPage': 5}, 'items': [{'kind': 'youtube#channel', 'etag': 'KO6TDehgfu0tlitTXEyUQbtmR80', 'id': 'UCCezIgC97PvUuR4_gbFUs5g', 'statistics': {'viewCount': '53115672', 'subscriberCount': '728000', 'hiddenSubscriberCount': False, 'videoCount': '230'}}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "beginning-vertical",
+   "metadata": {},
+   "source": [
+    ":)!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "loaded-ranch",
+   "metadata": {},
+   "source": [
+    "*Now let's figure out how to search for YouTube music videos based on keywords.*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "posted-theorem",
+   "id": "perfect-submission",
    "metadata": {},
    "outputs": [],
    "source": []
