add random recommendation (for baseline)

--- a/notebooks and scratchpaper/Recommender Scratch Paper.ipynb
+++ b/notebooks and scratchpaper/Recommender Scratch Paper.ipynb
@@ -5052,9 +5052,182 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "0220974c",
+   "metadata": {},
+   "source": [
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "473dc325",
+   "metadata": {},
+   "source": [
+    "# Baseline (Random Recommendation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "71be5c51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scraper import Scraper\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "499907bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Recommender:\n",
+    "    def __init__(self, keywords):\n",
+    "        \"\"\"\n",
+    "        To start - we need to have a list of keywords.\n",
+    "        (At least for now, until we add other strategies)\n",
+    "        \"\"\"\n",
+    "        self.strategy = 0\n",
+    "        self.keywords = keywords\n",
+    "        \n",
+    "        # Before beginning, get the initial list of keywords\n",
+    "        self.scraper = Scraper()\n",
+    "        self.searched_ids = self.scraper.search_videos(keywords)\n",
+    "    # --------------------------------------    \n",
+    "    \n",
+    "    def recommend(self, K = 1):\n",
+    "        \"\"\"\n",
+    "        params:\n",
+    "        K - number of videos to return (will return top-K recommendations)\n",
+    "\n",
+    "        return:\n",
+    "        a list of video IDs\n",
+    "        \"\"\"\n",
+    "        if(self.strategy == 0):\n",
+    "            return self.strat_random(K)\n",
+    "            \n",
+    "    \n",
+    "    def change_strategy(self, strat):\n",
+    "        self.strategy = strat\n",
+    "    \n",
+    "    # --------------------------------------\n",
+    "    # RECOMMENDATION STRATEGIES (Individual)\n",
+    "    # --------------------------------------\n",
+    "    def strat_random(self, K):\n",
+    "        recommended = []\n",
+    "        \n",
+    "        for i in range(0, K):\n",
+    "            \n",
+    "            # generate random number (for rand video)\n",
+    "            num = random.randint(0,len(self.searched_ids))\n",
+    "            \n",
+    "            # if random video is already in the list, pick another\n",
+    "            while self.searched_ids[num] in recommended:\n",
+    "                num = random.randint(0,len(self.searched_ids))\n",
+    "            \n",
+    "            recommended.append(self.searched_ids[num])\n",
+    "            \n",
+    "        return recommended\n",
+    "    \n",
+    "    def strat_cos_sim(self, K):\n",
+    "        pass\n",
+    "    \n",
+    "    # --------------------------------------\n",
+    "    # RECOMMENDATION STRATEGIES (Group)\n",
+    "    # --------------------------------------\n",
+    "    def group_least_misery():\n",
+    "        pass\n",
+    "    \n",
+    "    # --------------------------------------\n",
+    "    # OTHER/SUPPORTING METHODS\n",
+    "    # --------------------------------------\n",
+    "    \n",
+    "    def set_strategy(self, num):\n",
+    "        self.strategy = num\n",
+    "    \n",
+    "    def set_keywords(self, keys):\n",
+    "        self.keywords = keys\n",
+    "        \n",
+    "    def view_keywords(self):\n",
+    "        print(self.keywords)\n",
+    "        \n",
+    "    def view_youtube_list(self):\n",
+    "        print(self.searched_ids)\n",
+    "        \n",
+    "    # --------------------------------------\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "97e41ac4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['study', 'zelda', 'ado']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keywords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "79ec35ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rec = Recommender(keywords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "67d3f8f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mY_AhrCfK7g',\n",
+       " 'Gt0itDWYBwc',\n",
+       " 'hjQfYEjvJeU',\n",
+       " 'rYIugazDsUI',\n",
+       " 'EiZtRrvy1BI',\n",
+       " 'SlNhwnssA8g',\n",
+       " 'RL7042ALl1o',\n",
+       " '9eyqOO7i3b8',\n",
+       " 'LiTsXcrxZfg',\n",
+       " 'AFqv-dyuDtw']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rec.recommend(K=10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db1ef75f",
+   "id": "06b15baa",
    "metadata": {},
    "outputs": [],
    "source": []
