--- a/notebooks and scratchpaper/Recommender Scratch Paper.ipynb
+++ b/notebooks and scratchpaper/Recommender Scratch Paper.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "0219c0f5",
    "metadata": {},
    "outputs": [],
@@ -5053,7 +5053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0220974c",
+   "id": "f3eab2ca",
    "metadata": {},
    "source": [
     "<hr>"
@@ -5061,7 +5061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "473dc325",
+   "id": "683bab6d",
    "metadata": {},
    "source": [
     "# Baseline (Random Recommendation)"
@@ -5069,8 +5069,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "71be5c51",
+   "execution_count": 12,
+   "id": "04d0ce19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5080,11 +5080,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "499907bb",
+   "execution_count": 13,
+   "id": "749bbfb9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scraper import Scraper\n",
+    "import random\n",
+    "\n",
     "class Recommender:\n",
     "    def __init__(self, keywords):\n",
     "        \"\"\"\n",
@@ -5096,7 +5099,7 @@
     "        \n",
     "        # Before beginning, get the initial list of keywords\n",
     "        self.scraper = Scraper()\n",
-    "        self.searched_ids = self.scraper.search_videos(keywords)\n",
+    "        self.searched_ids = self.scraper.search_videos(self.keywords)\n",
     "    # --------------------------------------    \n",
     "    \n",
     "    def recommend(self, K = 1):\n",
@@ -5129,7 +5132,7 @@
     "            while self.searched_ids[num] in recommended:\n",
     "                num = random.randint(0,len(self.searched_ids))\n",
     "            \n",
-    "            recommended.append(self.searched_ids[num])\n",
+    "            recommended.append(self.convert_to_url(self.searched_ids[num]))\n",
     "            \n",
     "        return recommended\n",
     "    \n",
@@ -5154,9 +5157,20 @@
     "        \n",
     "    def view_keywords(self):\n",
     "        print(self.keywords)\n",
+    "\n",
+    "    def get_keywords(self):\n",
+    "        return self.keywords\n",
+    "\n",
+    "    def update_video_list(self):\n",
+    "        self.scraper = Scraper()\n",
+    "        self.searched_ids = self.scraper.search_videos(self.keywords)\n",
     "        \n",
     "    def view_youtube_list(self):\n",
     "        print(self.searched_ids)\n",
+    "        \n",
+    "    def convert_to_url(self, y_id):\n",
+    "        # https://www.youtube.com/watch?v=q3J0H5SAhJY\n",
+    "        return f\"https://www.youtube.com/watch?v={y_id}\"\n",
     "        \n",
     "    # --------------------------------------\n",
     "        \n",
@@ -5165,8 +5179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "97e41ac4",
+   "execution_count": 16,
+   "id": "f1f484b0",
    "metadata": {},
    "outputs": [
     {
@@ -5175,7 +5189,7 @@
        "['study', 'zelda', 'ado']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5186,48 +5200,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "79ec35ce",
+   "execution_count": 17,
+   "id": "707ca440",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "HttpError",
+     "evalue": "<HttpError 403 when requesting https://youtube.googleapis.com/youtube/v3/search?part=snippet&maxResults=50&q=study&type=video&videoCategoryId=10&key=AIzaSyCY9kgqlPRLU3zw1PoLpKsrGjSTDpN5mY8%0A&alt=json&pageToken=CGQQAA returned \"The request cannot be completed because you have exceeded your <a href=\"/youtube/v3/getting-started#quota\">quota</a>.\". Details: \"[{'message': 'The request cannot be completed because you have exceeded your <a href=\"/youtube/v3/getting-started#quota\">quota</a>.', 'domain': 'youtube.quota', 'reason': 'quotaExceeded'}]\">",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mHttpError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-13e286fc847b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrec\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mRecommender\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeywords\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-13-98cdc921552c>\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, keywords)\u001b[0m\n\u001b[0;32m     13\u001b[0m         \u001b[1;31m# Before beginning, get the initial list of keywords\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscraper\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mScraper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msearched_ids\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscraper\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msearch_videos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeywords\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m     \u001b[1;31m# --------------------------------------\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Projects\\group-music-recommender\\notebooks and scratchpaper\\utils\\scraper.py\u001b[0m in \u001b[0;36msearch_videos\u001b[1;34m(self, search_terms, pages, results_per_page)\u001b[0m\n\u001b[0;32m     59\u001b[0m                                         \u001b[0mprevious_request\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlast_request\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m                                         previous_response = last_response)\n\u001b[1;32m---> 61\u001b[1;33m                 \u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     62\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m                 \u001b[1;31m# iterate through the response and save just the video id's\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32md:\\projects\\group-music-recommender\\venv\\lib\\site-packages\\googleapiclient\\_helpers.py\u001b[0m in \u001b[0;36mpositional_wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    132\u001b[0m                 \u001b[1;32melif\u001b[0m \u001b[0mpositional_parameters_enforcement\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mPOSITIONAL_WARNING\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    133\u001b[0m                     \u001b[0mlogger\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 134\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mwrapped\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    135\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    136\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mpositional_wrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32md:\\projects\\group-music-recommender\\venv\\lib\\site-packages\\googleapiclient\\http.py\u001b[0m in \u001b[0;36mexecute\u001b[1;34m(self, http, num_retries)\u001b[0m\n\u001b[0;32m    933\u001b[0m             \u001b[0mcallback\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    934\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mresp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstatus\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m300\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 935\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mHttpError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcontent\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0muri\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muri\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    936\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpostproc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcontent\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    937\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mHttpError\u001b[0m: <HttpError 403 when requesting https://youtube.googleapis.com/youtube/v3/search?part=snippet&maxResults=50&q=study&type=video&videoCategoryId=10&key=AIzaSyCY9kgqlPRLU3zw1PoLpKsrGjSTDpN5mY8%0A&alt=json&pageToken=CGQQAA returned \"The request cannot be completed because you have exceeded your <a href=\"/youtube/v3/getting-started#quota\">quota</a>.\". Details: \"[{'message': 'The request cannot be completed because you have exceeded your <a href=\"/youtube/v3/getting-started#quota\">quota</a>.', 'domain': 'youtube.quota', 'reason': 'quotaExceeded'}]\">"
+     ]
+    }
+   ],
    "source": [
     "rec = Recommender(keywords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "67d3f8f6",
+   "execution_count": 53,
+   "id": "fc096128",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poo = rec.recommend(K=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "bb93038a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['mY_AhrCfK7g',\n",
-       " 'Gt0itDWYBwc',\n",
-       " 'hjQfYEjvJeU',\n",
-       " 'rYIugazDsUI',\n",
-       " 'EiZtRrvy1BI',\n",
-       " 'SlNhwnssA8g',\n",
-       " 'RL7042ALl1o',\n",
-       " '9eyqOO7i3b8',\n",
-       " 'LiTsXcrxZfg',\n",
-       " 'AFqv-dyuDtw']"
+       "'https://www.youtube.com/watch?v=hZ6bejCsJd0'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rec.recommend(K=10)"
+    "rec.convert_to_url(poo[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c8f6ac47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scraper import Scraper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fbf3c76a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os, sys\n",
+    "CURR_DIR = os.getcwd()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "761ac47d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\Projects\\\\group-music-recommender\\\\notebooks and scratchpaper'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CURR_DIR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "01f436e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "sys.path.append(CURR_DIR + \"\\\\utils\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1439a69a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scraper import Scraper"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06b15baa",
+   "id": "bffb4fab",
    "metadata": {},
    "outputs": [],
    "source": []
