--- a/notebooks and scratchpaper/Recommender Scratch Paper.ipynb
+++ b/notebooks and scratchpaper/Recommender Scratch Paper.ipynb
@@ -9851,7 +9851,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "ed6ad3c4",
+   "id": "b66f7ebf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11401,7 +11401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa6a285f",
+   "id": "6c1b4673",
    "metadata": {},
    "source": [
     "<hr>"
@@ -11480,8 +11480,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 316,
+   "id": "dc59cd89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>score</th>\n",
+       "      <th>video_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>0.813754</td>\n",
+       "      <td>sOiMD45QGLs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>375</th>\n",
+       "      <td>0.763965</td>\n",
+       "      <td>zs6Mnu4gMHM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>387</th>\n",
+       "      <td>0.725491</td>\n",
+       "      <td>jdcxVw9p2YQ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>0.721689</td>\n",
+       "      <td>YnSW8ian29w</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>517</th>\n",
+       "      <td>0.721016</td>\n",
+       "      <td>n_sDtV5oZR0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        score     video_id\n",
+       "363  0.813754  sOiMD45QGLs\n",
+       "375  0.763965  zs6Mnu4gMHM\n",
+       "387  0.725491  jdcxVw9p2YQ\n",
+       "360  0.721689  YnSW8ian29w\n",
+       "517  0.721016  n_sDtV5oZR0"
+      ]
+     },
+     "execution_count": 316,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(removed_negatives).nlargest(5, columns=['score'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb75aba2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(removed_negatives).nlargest"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 225,
-   "id": "1fb0bc81",
+   "id": "2842876e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11519,7 +11608,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "a285b687",
+   "id": "7e7b8881",
    "metadata": {},
    "outputs": [
     {
@@ -11540,7 +11629,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "91417f6c",
+   "id": "c4024d33",
    "metadata": {},
    "outputs": [
     {
@@ -11561,7 +11650,7 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "id": "e190d5ae",
+   "id": "d66beca7",
    "metadata": {},
    "outputs": [
     {
@@ -11589,7 +11678,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "ce8f5a4c",
+   "id": "d745fa09",
    "metadata": {},
    "outputs": [
     {
@@ -12230,7 +12319,7 @@
   {
    "cell_type": "code",
    "execution_count": 293,
-   "id": "ce515f79",
+   "id": "d5e16948",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12240,7 +12329,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "3291528b",
+   "id": "b1fc8244",
    "metadata": {},
    "outputs": [
     {
@@ -12522,7 +12611,7 @@
   {
    "cell_type": "code",
    "execution_count": 304,
-   "id": "bdb97123",
+   "id": "bd98a73d",
    "metadata": {},
    "outputs": [
     {
@@ -12553,7 +12642,7 @@
   {
    "cell_type": "code",
    "execution_count": 307,
-   "id": "045c8ae1",
+   "id": "162f2c2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12619,7 +12708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a70e613b",
+   "id": "c1afb3ee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -12627,7 +12716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80fc4a0a",
+   "id": "674e1500",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -12635,7 +12724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43d89533",
+   "id": "1f8ca425",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -12643,7 +12732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46ca8b25",
+   "id": "64cfddb6",
    "metadata": {},
    "outputs": [],
    "source": []
